--- a/teamBirra2 - Laravel/composer/Proyecto-Integrador/public/css/style.css
+++ b/teamBirra2 - Laravel/composer/Proyecto-Integrador/public/css/style.css
@@ -243,14 +243,14 @@ style="background-color:#fece18"
 
 
   .box_product {
-    position: absolute;
+  /*  position: absolute;
     padding:2%;
     width: 90%;
     height: 90%;
     border-style: solid;
     border-color: black;
     background-color: rgba(255, 0, 0, 0.5);
-    color:black;
+    color:black;*/
 
   }
 
@@ -1117,4 +1117,45 @@ overflow: hidden;
   margin-top: 3%;
   padding-left:1%;
   padding-right: 1%;
+}
+
+/*-------------------------------------CONTACTO---------------------------*/
+.texto-contacto,.contact-form{
+  padding: 5%;
+  text-align: center;
+
+}
+
+.texto-contacto div,.contacto-dv P{
+  color: grey;
+  text-align: center;
+}
+
+.contacto-conjunto{
+  align-items: center;
+  overflow: hidden;
+}
+
+.contacto-dv{
+  padding: 2%;
+  text-align: center;
+  float: left;
+}
+
+.contenedor-datos-contacto{
+  overflow: hidden;
+  margin: 5%;
+}
+
+.info-pedido{
+
+  float: right;
+}
+
+.datos-pedido{
+  float: left;
+}
+
+.boton-contacto{
+  float: right;
 }
